# 1131-OOP

./: README.md
1121-oop-main/finalexam_test/material/: CMakeLists.txt  README.md  files.cmake
1121-oop-main/finalexam_test/material/include/: CalculateHelper.hpp  DieselEnergy.hpp  ElectricEnergy.hpp  EnergyInfo.hpp  ExpressTrain.hpp  ICalculable.hpp  IReservable.hpp  LocalTrain.hpp  ReserveInfo.hpp  ReserveTicketInfo.hpp  TicketInfo.hpp  TouristTrain.hpp  Train.hpp  TrainInfo.hpp  TrainSystem.hpp
1121-oop-main/finalexam_test/material/src/: DieselEnergy.cpp  ElectricEnergy.cpp  EnergyInfo.cpp  ExpressTrain.cpp  LocalTrain.cpp  ReserveInfo.cpp  ReserveTicketInfo.cpp  TicketInfo.cpp  TouristTrain.cpp  Train.cpp  TrainSystem.cpp
1121-oop-main/finalexam_test/material/test/: ut_CheckPoint1.cpp  ut_CheckPoint2.cpp  ut_CheckPoint3.cpp  ut_CheckPoint4.cpp  ut_CheckPoint5.cpp  ut_TrainInfo.cpp
1121-oop-main/midexam_test/material/: README.md  files.cmake
1121-oop-main/midexam_test/material/include/: Alcohol.h  AmarettoSour.h  CowboyShot.h  CraftBeer.h  Fireball.h  Goldschlager.h  Hefeweizen.h  IPA.h  Lager.h  Margarita.h  Martini.h  Mojito.h  Rum.h  Stout.h  Tequila.h  Wildfire.h
1121-oop-main/midexam_test/material/src/: Alcohol.cpp  AmarettoSour.cpp  CowboyShot.cpp  CraftBeer.cpp  Fireball.cpp  Goldschlager.cpp  Hefeweizen.cpp  IPA.cpp  Lager.cpp  Margarita.cpp  Martini.cpp  Mojito.cpp  Rum.cpp  Stout.cpp  Tequila.cpp  Wildfire.cpp
1121-oop-main/midexam_test/material/test/: ut_CheckPoint1.cpp  ut_CheckPoint2.cpp  ut_CheckPoint3.cpp
fin/OOP2024f_final-master/oop2024f_final/: CMakeLists.txt  README.md  files.cmake
fin/OOP2024f_final-master/oop2024f_final/include/: Account.hpp  Bank.hpp  BusinessAccount.hpp  Cheque.hpp  Deposits.hpp  Loan.hpp  Money.hpp  PersonalAccount.hpp  Ticket.hpp
fin/OOP2024f_final-master/oop2024f_final/src/: Account.cpp  Bank.cpp  BusinessAccount.cpp  Cheque.cpp  Deposits.cpp  Loan.cpp  Money.cpp  PersonalAccount.cpp  Ticket.cpp
hw0/oop2024f_B812110004_hw/: .gitignore  README.md  files.cmake
hw0/oop2024f_B812110004_hw/cmake/: Dependencies.cmake
hw0/oop2024f_B812110004_hw/include/: hello.hpp
hw0/oop2024f_B812110004_hw/src/: hello.cpp
hw0/oop2024f_B812110004_hw/test/: ut_hello.cpp  ut_sanity_check.cpp
hw1/oop2024f_B812110004_hw/: .gitignore
hw1/oop2024f_B812110004_hw/include/: TicketSystem.hpp
hw1/oop2024f_B812110004_hw/src/: TicketSystem.cpp
hw2/OOP2024f_hw-main/oop2024f_hw/: files.cmake
hw2/oop2024f_B812110004_hw/: README.md
hw2/oop2024f_B812110004_hw/docs/: git.md  hint.md
hw2/oop2024f_B812110004_hw/include/: Vector.hpp
hw2/oop2024f_B812110004_hw/src/: Vector.cpp
hw2/oop2024f_B812110004_hw/test/: ut_Vector.cpp
hw3/oop2024f_B812110004_hw/: CMakeLists.txt  README.md  files.cmake
hw3/oop2024f_B812110004_hw/include/: Drink.hpp  Ingredients.hpp  MainDish.hpp  OishiiPapa.hpp  Order.hpp  Package.hpp  SideDish.hpp
hw3/oop2024f_B812110004_hw/src/: Drink.cpp  Food.cpp  MainDish.cpp  OishiiPapa.cpp  Order.cpp  Package.cpp  SideDish.cpp
hw3/oop2024f_B812110004_hw/test/: ut_Food.cpp  ut_Oishiipapa.cpp  ut_Package.cpp
hw4/OOP2024f_hw-main/oop2024f_hw/: CMakeLists.txt  LICENSE
hw4/oop2024f_B812110004_hw/: README.md  files.cmake
hw4/oop2024f_B812110004_hw/include/: CoalOre.hpp  Config.hpp  DiamondOre.hpp  Furnace.hpp  GoldOre.hpp  IronOre.hpp  List.hpp  List.inl  Ore.hpp  Pickaxe.hpp  Product.hpp
hw4/oop2024f_B812110004_hw/src/: CoalOre.cpp  DiamondOre.cpp  Furnace.cpp  GoldOre.cpp  IronOre.cpp  Ore.cpp  SmeltableOre.cpp
hw4/oop2024f_B812110004_hw/test/: DiamondOre_test.cpp  Furnace_test.cpp  List_test.cpp
hw5/OOP2024f_hw-main/oop2024f_hw/: README.md
hw5/oop2024f_B812110004_hw/: .gitignore  README.md  files.cmake
hw5/oop2024f_B812110004_hw/include/: CraftingTable.hpp  Furnace.hpp  GoldIngot.hpp  GoldOre.hpp  ISmeltable.hpp  IronIngot.hpp  IronOre.hpp  Ore.hpp  Pickaxe.hpp
hw5/oop2024f_B812110004_hw/src/: CopperIngot.cpp  CopperOre.cpp  CraftingTable.cpp  Diamond.cpp  DiamondOre.cpp  Furnace.cpp  GoldIngot.cpp  GoldOre.cpp  IronIngot.cpp  IronOre.cpp
hw5/oop2024f_B812110004_hw/test/: CopperOre_test.cpp  Furnace_test.cpp
lab1/lab/: CMakeLists.txt  README.md  files.cmake
lab1/lab/include/: Character.hpp  Clyde.hpp  Inky.hpp  Util.hpp
lab1/lab/src/: Clyde.cpp  Inky.cpp  Pinky.cpp  Util.cpp
lab1/lab/test/: main.cpp
lab1/lab_bonus/: files.cmake
lab1/lab_bonus/include/: Ambusher.hpp  Blinky.hpp  Pacman.hpp  Pinky.hpp  Util.hpp
lab1/lab_bonus/src/: Ambusher.cpp  Blinky.cpp  Character.cpp  Pacman.cpp  Util.cpp
lab1/lab_bonus/test/: main.cpp
lab2/lab/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  files.cmake
lab2/lab/include/Interface/: Attackable.hpp  GetPointer.hpp  MonsterMovable.hpp
lab2/lab/include/Object/: Blinky.hpp  Dot.hpp  GameObject.hpp
lab2/lab/include/State/: ChaseState.hpp
lab2/lab/include/Util/: Map.hpp  RuntimeFramework.hpp
lab2/lab/runtime/: Runtime.cpp
lab2/lab/scripts/: coverage.sh
lab2/lab/src/: Blinky.cpp  Clyde.cpp  Dot.cpp  Inky.cpp  Map.cpp  MovementState.cpp  Pinky.cpp  Player.cpp  ScatterState.cpp
lab2/lab_bonus/: Readme.md  files.cmake
lab2/lab_bonus/runtime/: Runtime.cpp  main.cpp
lab2/lab_bonus/src/: Blinky.cpp  ChaseState.cpp  Cherry.cpp  CherryManager.cpp  Clyde.cpp  DotManager.cpp  Inky.cpp  Map.cpp  Pinky.cpp  ScatterState.cpp
lab2/lab_bonus/test/: ut_GamePosition.cpp
mid/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  files.cmake
mid/include/: TransferLayer.hpp
mid/include/Factory/: FactoryJapan.h  FactoryUSA.h
mid/include/Object/: Boat.h  Bus.h  Plane.h  Train.h  Vehicle.h
mid/include/System/: EnergyStation.hpp  MaintenanceSystem.hpp  TicketSystem.hpp
mid/src/: Boat.cpp  Bus.cpp  EnergyStation.cpp  FactoryJapan.cpp  FactoryUSA.cpp  MaintenanceSystem.cpp  Plane.cpp  TicketSystem.cpp  Train.cpp  Vehicle.cpp
mid/test/: ut_Boat.cpp  ut_Bus.cpp  ut_EnergyStation.cpp  ut_FactoryJapan.cpp  ut_FactoryUSA.cpp  ut_MaintenceSystem.cpp  ut_Plane.cpp  ut_TicketSystem.cpp  ut_Train.cpp  ut_Vehicle.cpp
(+87 files in other folders)
